	* libc:  Renamed nuttx/lib to nuttx/libc to make space for a true lib/
	  directory that will be forthcoming.  Also rename libraries:  liblib.a -> libc.a,
	  libulib.a -> libuc.a, libklib.a -> libkc.a, liblibxx.a ->libcxx.a.
	  (I will probably, eventually rename libxx to libcxx for consistency)
	* Makefile, lib/: A new, empty directory that will hold generated libraries.
	  This simplifies the library patch calculations and lets me get rid of some
	  bash logic.  The change is functional, but only partially complete;
	  additional logic is needed in the arch/*/src/Makefile's as well.  Right
	  now that logic generate multiple library paths, all pointing to the lib/
	  directory.
	* arch/*/src/Makefile:  Now uses only the libraries in lib/
	  Replace bash fragments that test for board/Makefile.
	* Makefile.win:  The beginnings of a Windows-native build.  This is just
	  the begining and not yet ready for prime time use.
	* configs/stm32f4discovery/winbuild:  This is a version of the standard
	  NuttX OS test, but configured to build natively on Windows.  Its only
	  real purpose is to very the native Windows build logic.
	* tools/mkdeps.bat and tools/mkdeps.c:  mkdeps.bat is a failed attempt
	  to leverage mkdeps.sh to CMD.exe.  It fails because the are certain
	  critical CFLAG values that cannot be passed on the CMD.exe command line
	  (line '=').  mkdeps.c is a work in progress that will, hopefully,
	  replace both mkdeps.sh and mkdeps.bat.
	* tools/Config.mk:  Centralize the definition of the scrpt that will be
	  used to generated header file include paths for the compiler.  This
	  needs to be centralized in order to support the Windows native build.
	* tools/incdir.bat:  A replaced for tools/incdir.sh for use with the
	  the Windows native build.
	* Makefile.unix:  The existing top-level Makefile has been renamed
	  Makefile.unix.
	* Makefile:  This is a new top-level Makefile that just includes
	  either Makefile.unix or Makefile.win
